tests/errors/semantic/non_blocking/is.py
ad = 1.

# this statement will be ignored at the codegen
x = ad is None
